begin add ajax load function

--- a/css/iconfirm.css
+++ b/css/iconfirm.css
@@ -40,7 +40,10 @@
     margin: auto;
     background: #fff;
 }
-
+.iconfirm__loading{
+    display: none;
+    text-align: center;
+}
 .iconfirm__head {
     position: relative;
     padding: 30px 0 0 0;
