添加异步请求内容的支持

--- a/css/iconfirm.css
+++ b/css/iconfirm.css
@@ -40,6 +40,9 @@
     margin: auto;
     background: #fff;
 }
+.iconfirm__box.loading .iconfirm__loading{
+    display: block;
+}
 .iconfirm__loading{
     display: none;
     text-align: center;
