--- a/css/iconfirm.css
+++ b/css/iconfirm.css
@@ -36,20 +36,20 @@
 }
 
 .iconfirm__box {
+    overflow: hidden;
     width: 500px;
     margin: auto;
-    background: #fff;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, .2);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, .2);
 }
-.iconfirm__box.loading .iconfirm__loading{
-    display: block;
-}
-.iconfirm__loading{
-    display: none;
-    text-align: center;
-}
+
 .iconfirm__head {
     position: relative;
     padding: 30px 0 0 0;
+    background: #fff;
+    
 }
 
 .iconfirm__head:active {
@@ -75,10 +75,7 @@
     text-align: center;
     white-space: nowrap;
     text-overflow: ellipsis;
-}
-
-.iconfirm__box {
-    box-shadow: 0 2px 6px rgba(0, 0, 0, .2);
+    -o-text-overflow: ellipsis;
 }
 
 .iconfirm__close-icon {
@@ -99,6 +96,8 @@
 
 .iconfirm__main {
     padding: 20px;
+    background: #fff;
+    
 }
 
 .iconfirm__buttons--multipe {
@@ -121,6 +120,29 @@
     border: 0;
     outline: none;
     background: #eb5d5b;
+}
+
+@-webkit-keyframes shake {
+    10%, 90% {
+        -webkit-transform: translate3d(-2px, 0, 0);
+        transform: translate3d(-2px, 0, 0);
+    }
+
+    20%, 80% {
+        -webkit-transform: translate3d(4px, 0, 0);
+        transform: translate3d(4px, 0, 0);
+    }
+
+    30%, 50%, 70% {
+        -webkit-transform: translate3d(-8px, 0, 0);
+        transform: translate3d(-8px, 0, 0);
+    }
+
+    40%, 60% {
+        -webkit-transform: translate3d(8px, 0, 0);
+        transform: translate3d(8px, 0, 0);
+    }
+
 }
 
 @keyframes shake {
@@ -147,11 +169,15 @@
 }
 
 .iconfirm__box.hilight-shake {
+    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
+    -webkit-animation: shake .82s cubic-bezier(.36, .07, .19, .97) both;
     animation: shake .82s cubic-bezier(.36, .07, .19, .97) both;
 }
 
 .iconfirm__box--sacle {
+    -webkit-transform: scale(.5);
+    -ms-transform: scale(.5);
     transform: scale(.5);
     opacity: 0;
 }
